mocks/letter-29
<pre>
Traceback (most recent call last):
File "main.py", line 24

^
SyntaxError: unexpected EOF while parsing
</pre>

<a href='https://praktikum.yandex.ru/trainer/backend-developer/lesson/dab06c59-b76e-4b26-a31f-1cfbb68b3c06/task/0932f13d-8ad2-4ee4-ab90-a36cb06cf3bf/'>Link</a>